tests/neg-custom-args/captures/use-capset.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/use-capset.scala:10:22 -----------------------------------
10 |  val _: () -> Unit = h // error: should be ->{io}
   |                      ^
   |                      Found:    (h : () ->{io} Unit)
   |                      Required: () -> Unit
   |
   |                      Note that capability `io` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/use-capset.scala:12:50 -----------------------------------
12 |  val _: () -> List[Object^{io}] -> Object^{io} = h2 // error, should be ->{io}
   |                                                  ^^
   |                                                 Found:    (h2 : () ->{io} List[Object^{io}] ->{io} Object^{io})
   |                                                 Required: () -> List[Object^{io}] -> Object^{io}
   |
   |                                                 Note that capability `h2` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
